@startuml
title ER-диаграмма PreVisor

' Стиль
hide circle
hide methods
hide stereotypes

skinparam entity {
  BackgroundColor White
  BorderColor #555555
  FontColor #111111
}

' === Сущности ===

entity "ip_cache" as IPCache {
  * ip : VARCHAR <<PK>>
  --
  reputation : FLOAT
  last_check : DATETIME
  source     : VARCHAR
}

entity "alerts" as Alerts {
  * id : INTEGER <<PK>>
  --
  timestamp       : DATETIME
  source_ip       : VARCHAR
  alert_type      : VARCHAR
  probability     : FLOAT
  status          : VARCHAR
  traffic_log_id  : INTEGER
}

entity "traffic_logs" as TrafficLogs {
  * id : INTEGER <<PK>>
  --
  timestamp    : DATETIME
  source_ip    : VARCHAR
  dest_ip      : VARCHAR
  protocol     : INTEGER
  src_port     : INTEGER
  dest_port    : INTEGER
  packet_len   : INTEGER
  ttl          : INTEGER
  tcp_flags    : INTEGER
  http_method  : VARCHAR
  mode         : VARCHAR
}

' === Связи ===
IPCache "0..1" -- "0..*" Alerts : "alerts.source_ip -> ip_cache.ip"
TrafficLogs "0..1" -- "0..*" Alerts : "alerts.traffic_log_id -> traffic_logs.id"

' Пояснение:
' - Связи логические (в ORM/SQLite внешние ключи не заданы).
' - ip_cache.ip      <-> alerts.source_ip
' - traffic_logs.id  <-> alerts.traffic_log_id

@enduml
